Conteudo tela de gerenciamento de computadores

--- a/site/public/dashboard/html/usuarios.html
+++ b/site/public/dashboard/html/usuarios.html
@@ -154,7 +154,7 @@
                 <div class="caixa deletar">
                     <div class="aviso-alerta-modal">
                         <img src="../assets/usuarios/alert.png">
-                        <span>Remover o usuário é uma ação permanente deseja continuar?</span>
+                        <span>Remover o usuário é uma ação permanente, deseja continuar?</span>
                     </div>
                     <div class="confirmacao-alerta-modal">
                         <button class="botao" onclick="sair_deletar()">Cancelar</button>
