alterações na dashboard

--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -109,7 +109,7 @@
                 <div class="botoes">
                     <p>Opções:</p>
                     <div class="botoesFooter">
-                        <button>Gerenciar</button>
+                        <button onclick="gerenciar_window()">Gerenciar</button>
                         <button>Reiniciar</button>
                     </div>
                 </div>
