alterações na dashboard home

--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -78,14 +78,14 @@
                             </div>
                         </div>
 
-                        <div class="fundoLegenda">
+                        <div class="fundoLegenda" onmouseenter="modal1()">
                             <img src="../assets/dashboard/vermelho.png" alt="">
                         </div>
                     </div>
 
                     <div class="boxLegendaGrafico2">
 
-                        <div class="fundoLegenda2">
+                        <div class="fundoLegenda2" onmouseenter="modal2()">
                             <img src="../assets/dashboard/verde.png" alt="">
                         </div>
                         <div class="graficBox">
@@ -116,14 +116,14 @@
                             </div>
                         </div>
 
-                        <div class="fundoLegenda">
+                        <div class="fundoLegenda" onmouseenter="modal3()">
                             <img src="../assets/dashboard/verde.png" alt="">
                         </div>
                     </div>
 
                     <div class="boxLegendaGrafico2">
 
-                        <div class="fundoLegenda2">
+                        <div class="fundoLegenda2" onmouseenter="modal4()">
                             <img src="../assets/dashboard/amarelo.png" alt="">
                         </div>
                         <div class="graficBox">
