att side-bar dash

--- a/site/public/dashboard/html/computadores_gerenciar.html
+++ b/site/public/dashboard/html/computadores_gerenciar.html
@@ -4,30 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciar</title>
+    <title>Gerenciar Computador</title>
     <link rel="stylesheet" href="../css/geral.css">
     <link rel="stylesheet" href="../css/computadoresGerenciar.css">
+    <script src="https://kit.fontawesome.com/c06dcecf1f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="left-side-window" id="caixa1">
-        <div class="container">
-
-            <div class="user-info">
-                <span id="nome_empresa" class="text-geral">Monitor mind</span><img
-                    src="../assets/home/imagem-do-usuario-com-fundo-preto.png">
-            </div>
-
-            <div class="nav-itens">
-                <div><a href="home.html"><span class="text-geral" id="text-geral13">Visão geral</span></a></div>
-                <div class="destaque"><a href="computadores.html"><span style="color: #4eabe9" class="text-geral"
-                            id="text-geral14">Computadores</span></a></div>
-                <div><a href="usuarios.html"><span class="text-geral" id="text-geral15">Usuários</span></a></div>
-                <div><a href="analytcs.html"><span class="text-geral" id="text-geral16">Analytics</span></a></div>
-            </div>
-
-            <div class="sair-button">
-                <a href="../../index.html"><span class="text-geral" id="text-geral1">SAIR</span></a>
-            </div>
+        <div class="side-nav">
+            <a href="#" class="logo">
+                <img src="../assets/home/logoClara.png" alt="" class="logo-img">
+            </a>
+            <ul class="nav-links">
+                <li><a href="home.html"><i class="fa-solid fa-house-user"></i><p>Visão Geral</p></a></li>
+                <li><a href="computadores.html"><i class="fa-solid fa-desktop"></i><p>Computadores</p></a></li>
+                <li><a href="usuarios.html"><i class="fa-solid fa-users"></i><p>Usuários</p></a></li>
+                <li><a href="analytics.html"><i class="fa-sharp fa-solid fa-chart-column"></i><p>Analytics</p></a></li>
+                <li><a href="../../index.html"><i class="fa-solid fa-arrow-right-from-bracket"></i><p>Sair</p></a></li>
+                <div class="active"></div>
+            </ul>
         </div>
 
     </section>
