--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -55,7 +55,7 @@
                             </select>
                         </div>
                         <div class="campoFiltro">
-                            <p>Numero Identificação:</p>
+                            <p>Número Identificação:</p>
                             <select name="" id="">
                                 <option value="">PE21424</option>
                             </select>
