--- a/site/public/dashboard/html/computadores_gerenciar.html
+++ b/site/public/dashboard/html/computadores_gerenciar.html
@@ -131,7 +131,7 @@
                 <div class="caixa deletar">
                     <div class="aviso-alerta-modal">
                         <img src="../assets/usuarios/alert.png">
-                        <span>Remover uma máquina é uma ação permanente, deseja continuar?</span>
+                        <span>Remover a máquina é uma ação permanente, deseja continuar?</span>
                     </div>
                     <div class="confirmacao-alerta-modal">
                         <button class="botao" onclick="sair_deletar()">Cancelar</button>
