--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="kpi-dados-item">
-                        <span class="titulo" id="text-geral8">Memoria</span>
+                        <span class="titulo" id="text-geral8">Memória</span>
 
                         <div class="box primeiro" id="box">
                             <img class="icone" src="../assets/home/memoria-ram-vermelho.png">
