--- a/site/public/dashboard/html/usuarios.html
+++ b/site/public/dashboard/html/usuarios.html
@@ -45,7 +45,7 @@
                                     <button class="busca-botao" onclick="buscar_usuario()"><img class="pesquisa_imagem" src="../assets/usuarios/lupa-branca.png"></button>
                                 </div>
                                 <div>
-                                    <button class="adicionar-botao" onclick="adicionar_usuario()">adicionar</button>
+                                    <button class="adicionar-botao" onclick="adicionar_usuario()">Adicionar</button>
                                 </div>
                             </div>
                         </div>
@@ -53,7 +53,7 @@
                         <div class="content-corpo">
                             <div class="infos-topo-tabela">
                                     <div class="info-item">ID</div>
-                                    <div class="info-item">USUARIO</div>
+                                    <div class="info-item">USUÁRIO</div>
                                     <div class="info-item">EMAIL</div>
                                     <div class="info-item">TIPO</div>
                                     <div class="info-item tools"></div>
