--- a/site/public/index.html
+++ b/site/public/index.html
@@ -137,7 +137,7 @@
 
                     <img src="assets/home_IconsAlerta.png">
 
-                    <span class="content">Com a monitoração constante do hardware, a empresa pode identificar
+                    <span class="content">Com o monitoramento constante do hardware, a empresa pode identificar
                         rapidamente qualquer problema que possa surgir. Isso pode ajudar a minimizar os tempos de
                         inatividade, economizando tempo e dinheiro.</span>
 
@@ -151,7 +151,7 @@
 
                     <img src="assets/home_iconsHardware.png">
 
-                    <span class="content">A monitoração regular também pode ajudar a prevenir problemas antes que
+                    <span class="content">O monitoramento regular também pode ajudar a prevenir problemas antes que
                         ocorram, permitindo que a empresa tome medidas preventivas. Isso pode ajudar a evitar danos ao
                         hardware e reduzir custos de manutenção.</span>
 
@@ -165,7 +165,7 @@
 
                     <img src="assets/home_iconsFoguete.png">
 
-                    <span class="content"> A monitoração constante pode ajudar a identificar problemas de desempenho em
+                    <span class="content"> O monitoramento constante pode ajudar a identificar problemas de desempenho em
                         tempo real, permitindo que a empresa tome medidas para melhorar a eficiência do hardware e
                         otimizar seu desempenho. Isso pode levar a economias significativas de custos e melhorar a
                         experiência do usuário.</span>
