--- a/site/public/login.html
+++ b/site/public/login.html
@@ -49,7 +49,7 @@
                             <div class="buttons">
                                 <button class="botaoEntrar" href="" onclick="entrar()">Entrar</button>
                                 <div>
-                                    <a class="botaoCadastro" href="cadastro.html">Esqueceu a senha? || <a class="botaoCadastro" href="cadastro.html">Não tem uma conta?</a>
+                                    <a class="botaoCadastro" href="cadastro.html">Esqueceu a senha? | <a class="botaoCadastro" href="cadastro.html">Não tem uma conta?</a>
                                 </div>    
                             </div>
 
