--- a/site/public/dashboard/html/analytics.html
+++ b/site/public/dashboard/html/analytics.html
@@ -44,13 +44,13 @@
                         <div class="kpi">
                             <div class="kpiContentTop">
                                 <img src="../assets/analytics/sem-wi-fi.png" alt="">
-                                <p>Máquinas que ficaram sem resposta de ping por mais de 5 minutos no dia</p>
+                                <p id="pingText">Máquinas sem resposta de ping</p>
                             </div>
                             <div class="kpiContentPorcen">
                                 <p>7%</p>
                             </div>
                             <div class="kpiContentTime">
-                                <p>Por 5 minutos</p>
+                                <p>+5 minutos</p>
                             </div>
                         </div>
 
