--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -38,10 +38,10 @@
                     <span>Operando 0</span>
                 </div>
                 <div class="caixa destaque_caixa">
-                    
+                    <span>Interrompido 0</span>
                 </div>
                 <div class="caixa destaque_caixa">
-                    
+                    <span>Manutenção 0</span>
                 </div>
             </nav>
 
@@ -139,6 +139,9 @@
                 </div>
 
                 <div class="box-analise caixa" id="caixa5">
+                    <div>
+                        Status dos computadores
+                    </div>
                     <div class="grafico">
                         <canvas id="grafico"></canvas>
                     </div>
