att design pc individual

--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="contentTitleImg">
-                        <img src="../assets/home/logoClara.png" alt="">
+                        <img src="../assets/home/logoEscura.png" alt="">
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                             <img src="../assets/dashboard/verde.png" alt="">
                         </div>
                         <div class="graficBox">
-                            <div class="titleChart">
+                            <div class="titleChart2">
                                 <h3>Uso (%) da memória RAM durante os últimos 30 minutos</h3>
                             </div>
                             <div class="graficoSolo">
@@ -122,7 +122,7 @@
                             <img src="../assets/dashboard/amarelo.png" alt="">
                         </div>
                         <div class="graficBox">
-                            <div class="titleChart">
+                            <div class="titleChart2">
                                 <h3>Uso do disco</h3>
                             </div>
                             <div class="graficoRosca">
