Tela de reinicio

--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -105,7 +105,7 @@
                     <p>Opções:</p>
                     <div class="botoesFooter">
                         <button onclick="gerenciar_window()">Gerenciar</button>
-                        <button>Reiniciar</button>
+                        <button onclick="reiniciar_window()">Reiniciar</button>
                     </div>
                 </div>
 
