Adicionando o sistema de busca na pagina do usuario, gerenciar_computadores e gerenciar_reinicios

--- a/site/public/dashboard/html/computadores_gerenciar.html
+++ b/site/public/dashboard/html/computadores_gerenciar.html
@@ -37,8 +37,8 @@
                             <span>Gerenciar computadores</span>
                             <div class="itens-topo">
                                 <div>
-                                    <input type="text" id="busca" onchange="buscar_usuario()" >
-                                    <button class="busca-botao" onclick="buscar_usuario()"><img class="pesquisa_imagem" src="../assets/usuarios/lupa-branca.png"></button>
+                                    <input type="text" id="busca" onchange="buscar_computador()" >
+                                    <button class="busca-botao" onclick="buscar_computador()"><img class="pesquisa_imagem" src="../assets/usuarios/lupa-branca.png"></button>
                                 </div>
                                 <div>
                                     <button class="adicionar-botao" onclick="adicionar_usuario()">adicionar</button>
