--- a/site/public/dashboard/html/computadores_reinicio.html
+++ b/site/public/dashboard/html/computadores_reinicio.html
@@ -37,8 +37,8 @@
                             <span>Gerenciar Reinicios</span>
                             <div class="itens-topo">
                                 <div>
-                                    <input type="text" id="busca" onchange="buscar_usuario()" >
-                                    <button class="busca-botao" onclick="buscar_usuario()"><img class="pesquisa_imagem" src="../assets/usuarios/lupa-branca.png"></button>
+                                    <input type="text" id="busca" onchange="buscar_computador()">
+                                    <button class="busca-botao" onclick="buscar_computador()"><img class="pesquisa_imagem" src="../assets/usuarios/lupa-branca.png"></button>
                                 </div>
                                 <div>
                                     <button class="adicionar-botao" onclick="adicionar_usuario()">adicionar</button>
@@ -114,8 +114,8 @@
                         <span>Cancelar o reinicio não afetara o computador, continuar?</span>
                     </div>
                     <div class="confirmacao-alerta-modal">
-                        <button class="botao" onclick="sair_deletar()">SIM</button>
-                        <button class="botao" style="background-color: rgb(218, 40, 40);" onclick="confirmar_deletar_usuario()">NÃO</button>
+                        <button class="botao" onclick="sair_deletar()">NÃO</button>
+                        <button class="botao" style="background-color: rgb(218, 40, 40);" onclick="confirmar_deletar_usuario()">SIM</button>
                     </div>
                 </div>
             </div>
