--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -67,8 +67,8 @@
                     <div class="titulos">
                         <div class="titulo" id="titulo">Componente em alerta por computador</div>
                         <div class="text-geral" id="text-geral2"><span
-                                id="maquinas_monitoradas_agora">0</span>/<span
-                                class="maquinas_monitoradas_total">0</span> Máquinas operando</div>
+                            id="maquinas_monitoradas_agora">150</span><span
+                            class="maquinas_monitoradas_total"></span> Máquinas operando</div>
                     </div>
 
                     <!-- <div class="legenda text-geral" id="text-geral3">
@@ -83,12 +83,12 @@
 
                         <div class="box primeiro" id="box">
                             <img class="icone" src="../assets/home/ethernet-vermelho.png">
-                            <span id="rede_vermelho" class="valores-kpi-alerta">0</span>
+                            <span id="rede_vermelho" class="valores-kpi-alerta">3</span>
                         </div>
 
                         <div class="box" id="box">
                             <img class="icone" src="../assets/home/ethernet-amarelo.png">
-                            <span id="rede_amarelo" class="valores-kpi">0</span>
+                            <span id="rede_amarelo" class="valores-kpi">12</span>
                         </div>
 
                     </div>
@@ -103,7 +103,7 @@
 
                         <div class="box" id="box">
                             <img class="icone" src="../assets/home/disco-rigido-amarelo.png">
-                            <span id="disco_amarelo" class="valores-kpi">0</span>
+                            <span id="disco_amarelo" class="valores-kpi">2</span>
                         </div>
 
                     </div>
@@ -113,12 +113,12 @@
 
                         <div class="box primeiro" id="box">
                             <img class="icone" src="../assets/home/processador-vermelho.png">
-                            <span id="cpu_vermelho" class="valores-kpi-alerta">0</span>
+                            <span id="cpu_vermelho" class="valores-kpi-alerta">10</span>
                         </div>
 
                         <div class="box" id="box">
                             <img class="icone" src="../assets/home/processador-amarelo.png">
-                            <span id="cpu_amarelo" class="valores-kpi">0</span>
+                            <span id="cpu_amarelo" class="valores-kpi">21</span>
                         </div>
 
                     </div>
@@ -128,12 +128,12 @@
 
                         <div class="box primeiro" id="box">
                             <img class="icone" src="../assets/home/memoria-ram-vermelho.png">
-                            <span id="memoria_vermelho" class="valores-kpi-alerta">0</span>
+                            <span id="memoria_vermelho" class="valores-kpi-alerta">4</span>
                         </div>
 
                         <div class="box" id="box">
                             <img class="icone" src="../assets/home/memoria-ram-amarelo.png">
-                            <span id="memoria_amarelo" class="valores-kpi">0</span>
+                            <span id="memoria_amarelo" class="valores-kpi">12</span>
                         </div>
 
                     </div>
@@ -145,13 +145,13 @@
                 <div class="box-analise caixa" id="caixa3">
                     <span class="text-geral" id="text-geral9">Computadores sem retorno</span>
                     <img class="icone-alerta" id="icone-pc" src="../assets/home/trabalho-em-progresso.png">
-                    <span id="vka2" class="valores-kpi-alerta">0</span>
+                    <span id="vka2" class="valores-kpi-alerta">2</span>
                 </div>
 
                 <div class="box-analise caixa" id="caixa4">
                     <span class="text-geral" id="text-geral10">Computadores com 2+ alertas vermelhos</span>
                     <img class="icone-alerta" id="icone-alerta" src="../assets/home/alerta.png">
-                    <span id="vka1" class="valores-kpi-alerta">0</span>
+                    <span id="vka1" class="valores-kpi-alerta">1</span>
                 </div>
 
                 <div class="box-analise caixa" id="caixa5">
