--- a/site/public/login.html
+++ b/site/public/login.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="entrada">
                                 <label for="ipt_senha" id="nomeCampo02">Senha:</label>
-                                <input id="ipt_senha">
+                                <input type="password" id="ipt_senha">
                             </div>
                         </div>
                             <div class="buttons">
