login e cadastro azure

--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -83,7 +83,7 @@
                             </div>
                             <div class="entrada">
                                 <label for="ipt_numero" id="label05">Número:</label>
-                                <input id="ipt_numero" placeholder="22">
+                                <input id="ipt_numero" placeholder="Ex: 22">
                                 <div style="display: none;" id="msgNumero"><span class="msgErro">Número incorreto</span></div>
                             </div>
                             <div class="entrada">
