Backend (com banco) tela de computadores e visão geral pronta

--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -117,7 +117,7 @@
 
                 <div class="trocarPag">
                     <img src="../assets/computador/seta-esquerda.png" alt="" onclick="antigPag()" id="esquerdaSeta" style="visibility: hidden;">
-                    <p><span id="paginaAtual">1</span> de <span id="totalPaginas">2</span></p>
+                    <p><span id="paginaAtual">#</span> de <span id="totalPaginas">#</span></p>
                     <img src="../assets/computador/seta-direita.png" alt="" onclick="proxPag()" id="direitaSeta">
                 </div>
             </div>
