--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -40,23 +40,23 @@
                 <div class="caixa destaque_caixaEsquerda">
                     <div>
                         <h6>Rede</h6>
-                        <p>Vermelho > 100 ping</p>
-                        <p>Amarelho > 60</p>
+                        <p>Vermelho > <span id="ParametroRedeV">#</span> ping</p>
+                        <p>Amarelho > <span id="ParametroRedeA">#</span> ping</p>
                     </div>
                     <div>
                         <h6>RAM</h6>
-                        <p>Vermelho > 90% uso</p>
-                        <p>Amarelho > 80% uso</p>
+                        <p>Vermelho > <span id="ParametroRamV">#</span>% uso</p>
+                        <p>Amarelho > <span id="ParametroRamA">#</span>% uso</p>
                     </div>
                     <div>
                         <h6>CPU</h6>
-                        <p>Vermelho > 90% uso</p>
-                        <p>Amarelho > 80% uso</p>
+                        <p>Vermelho > <span id="ParametroCpuV">#</span>% uso</p>
+                        <p>Amarelho > <span id="ParametroCpuA">#</span>% uso</p>
                     </div>
                     <div>
                         <h6>Disco</h6>
-                        <p>Vermelho > 90%</p>
-                        <p>Amarelho > 80%</p>
+                        <p>Vermelho > <span id="ParametroDiscoV">#</span>%</p>
+                        <p>Amarelho > <span id="ParametroDiscoA">#</span>%</p>
                     </div>
                 </div>
             </nav>
@@ -83,42 +83,12 @@
 
                         <div class="box primeiro" id="box">
                             <img class="icone" src="../assets/home/ethernet-vermelho.png">
-                            <span id="rede_vermelho" class="valores-kpi-alerta">3</span>
+                            <span id="rede_vermelho" class="valores-kpi-alerta">#</span>
                         </div>
 
                         <div class="box" id="box">
                             <img class="icone" src="../assets/home/ethernet-amarelo.png">
-                            <span id="rede_amarelo" class="valores-kpi">12</span>
-                        </div>
-
-                    </div>
-
-                    <div class="kpi-dados-item">
-                        <span class="titulo" id="text-geral6">Disco</span>
-
-                        <div class="box primeiro" id="box">
-                            <img class="icone" src="../assets/home/disco-rigido-vermelho.png">
-                            <span id="disco_vermelho" class="valores-kpi-alerta">0</span>
-                        </div>
-
-                        <div class="box" id="box">
-                            <img class="icone" src="../assets/home/disco-rigido-amarelo.png">
-                            <span id="disco_amarelo" class="valores-kpi">2</span>
-                        </div>
-
-                    </div>
-
-                    <div class="kpi-dados-item">
-                        <span class="titulo" id="text-geral7">CPU</span>
-
-                        <div class="box primeiro" id="box">
-                            <img class="icone" src="../assets/home/processador-vermelho.png">
-                            <span id="cpu_vermelho" class="valores-kpi-alerta">10</span>
-                        </div>
-
-                        <div class="box" id="box">
-                            <img class="icone" src="../assets/home/processador-amarelo.png">
-                            <span id="cpu_amarelo" class="valores-kpi">21</span>
+                            <span id="rede_amarelo" class="valores-kpi">#</span>
                         </div>
 
                     </div>
@@ -128,12 +98,42 @@
 
                         <div class="box primeiro" id="box">
                             <img class="icone" src="../assets/home/memoria-ram-vermelho.png">
-                            <span id="memoria_vermelho" class="valores-kpi-alerta">4</span>
+                            <span id="memoria_vermelho" class="valores-kpi-alerta">#</span>
                         </div>
 
                         <div class="box" id="box">
                             <img class="icone" src="../assets/home/memoria-ram-amarelo.png">
-                            <span id="memoria_amarelo" class="valores-kpi">12</span>
+                            <span id="memoria_amarelo" class="valores-kpi">#</span>
+                        </div>
+
+                    </div>
+
+                    <div class="kpi-dados-item">
+                        <span class="titulo" id="text-geral7">CPU</span>
+
+                        <div class="box primeiro" id="box">
+                            <img class="icone" src="../assets/home/processador-vermelho.png">
+                            <span id="cpu_vermelho" class="valores-kpi-alerta">#</span>
+                        </div>
+
+                        <div class="box" id="box">
+                            <img class="icone" src="../assets/home/processador-amarelo.png">
+                            <span id="cpu_amarelo" class="valores-kpi">#</span>
+                        </div>
+
+                    </div>
+
+                    <div class="kpi-dados-item">
+                        <span class="titulo" id="text-geral6">Disco</span>
+
+                        <div class="box primeiro" id="box">
+                            <img class="icone" src="../assets/home/disco-rigido-vermelho.png">
+                            <span id="disco_vermelho" class="valores-kpi-alerta">#</span>
+                        </div>
+
+                        <div class="box" id="box">
+                            <img class="icone" src="../assets/home/disco-rigido-amarelo.png">
+                            <span id="disco_amarelo" class="valores-kpi">#</span>
                         </div>
 
                     </div>
@@ -145,13 +145,13 @@
                 <div class="box-analise caixa" id="caixa3">
                     <span class="text-geral" id="text-geral9">Computadores sem retorno</span>
                     <img class="icone-alerta" id="icone-pc" src="../assets/home/trabalho-em-progresso.png">
-                    <span id="vka2" class="valores-kpi-alerta">2</span>
+                    <span id="vka2" class="valores-kpi-alerta">#</span>
                 </div>
 
                 <div class="box-analise caixa" id="caixa4">
                     <span class="text-geral" id="text-geral10">Computadores com 2+ alertas vermelhos</span>
                     <img class="icone-alerta" id="icone-alerta" src="../assets/home/alerta.png">
-                    <span id="vka1" class="valores-kpi-alerta">1</span>
+                    <span id="vka1" class="valores-kpi-alerta">#</span>
                 </div>
 
                 <div class="box-analise caixa" id="caixa5">
